# f1tenth-racetrack-generator

./: README.md  SPEC.md  centerline.py  chat-history.md  context.md  f2p.sh  lloyd.py  main.py  oldduct.py  pyproject.toml  track_width_profile_functions.py  update.sh  walls.py
conf/: config.schema.json  config.yaml  config_validator.py
config/: experiment.yaml
predefined-maps/: Budapest_map.csv  Budapest_map.ref.csv  Budapest_map_with_curvature.csv  Shanghai_map.csv  Spielberg.ref.csv  Spielberg_map.csv  Spielberg_map.yaml  clean_map.py  icra2022_map.csv
src/: __init__.py  centerline.py  centerline_visualization.py
src/air_duct/: base.py  obb_chain.py
src/centerline/: base.py  procedural_voronoi.py
src/core/: dataclass.py  interfaces.py  metrics.py
src/track/: base.py  curvature_coupled.py
src/utils/: io.py  visualization.py
